--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,3 +6,4 @@
     <div (click)="decrease()" class="px-3 py-2 bg-red-500 hover:bg-red-600 text-white font-bold rounded-xl cursor-pointer">Decrease</div>
   </div>
 </div>
+<!-- <app-xyz></app-xyz> -->
